# wallet

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  devspace.yaml  pyproject.toml
.github/workflows/: main.yml
src/wallet/: app.py  logging.py
src/wallet/cli/: __init__.py
src/wallet/rpcs/: wallet.py
tests/: conftest.py  session_id.py
tests/rpcs/: conftest.py
tests/rpcs/wallet/wallet_servicer/: conftest.py  test_create_account.py  test_get_accounts.py
